--- a/index.html
+++ b/index.html
@@ -9,7 +9,24 @@
 </head>
 
 <body>
-
+	<center>
+		<h> Flyp </h>
+	<center>
+		
+	<p>
+		Flype is a flip-flop snake-like game where the object is to collect as many of the points as possible.
+		
+		Controls:
+		<table>
+			<li> [Spacebar] - Change Direction of Rotation </li>
+			<li> [Shift + Spacebar] - Change Axis of Rotation </li>
+			<li> [q] - Boost Speed (shortens the bar) </li>
+		</table>
+		
+		<form action="https://jaures.github.io/Flyp/flyp.html"
+			<input type="sumbit" value="<<Go to Game>>" />
+		</form>
+	</p>
 </body>
 
 </html>
