--- a/index.html
+++ b/index.html
@@ -10,11 +10,11 @@
 
 <body>
 	<center>
-		<h> Flyp </h>
+		<h1> Flyp </h1>
 	</center>
 		
 	<p>
-		Flype is a flip-flop snake-like game where the object is to collect as many of the points as possible.
+		Flyp is a flip-flop snake-like game where the object is to collect as many of the points as possible.
 		<p>
 			Controls:
 			<table>
@@ -22,11 +22,12 @@
 				<li> [Shift + Spacebar] - Change Axis of Rotation </li>
 				<li> [q] - Boost Speed (shortens the bar) </li>
 			</table>
-
-			<form action="https://jaures.github.io/Flyp/flyp.html"
-				<input type="sumbit" value="<<Go to Game>>" />
-			</form>
 		</p>
+	
+			<form action="https://jaures.github.io/Flyp/flyp.html"
+				<input type="submit" value="Go to Game" />
+			</form>
+		
 	</p>
 </body>
 
