--- a/index.html
+++ b/index.html
@@ -14,13 +14,13 @@
 	</center>
 		
 	<p>
-		Flyp is a flip-flop snake-like game where the object is to collect as many of the points as possible.
+		Flyp is a flip-flop snake-like game where the objective is to collect as many of the points as possible.
 		<p>
 			Controls:
 			<table>
-				<li> [Spacebar] - Change Direction of Rotation </li>
+				<li> [Spacebar]         - Change Direction of Rotation </li>
 				<li> [Shift + Spacebar] - Change Axis of Rotation </li>
-				<li> [q] - Boost Speed (shortens the bar) </li>
+				<li> [q]                - Boost Speed (shortens the bar) </li>
 			</table>
 		</p>
 	
