--- a/index.html
+++ b/index.html
@@ -15,21 +15,19 @@
 		
 	<p>
 		Flyp is a flip-flop snake-like game where the objective is to collect as many of the points as possible.
-		<p>
-			Controls:
-			<table>
-				<li> [Spacebar]         - Change Direction of Rotation </li>
-				<li> [Shift + Spacebar] - Change Axis of Rotation </li>
-				<li> [q]                - Boost Speed (shortens the bar) </li>
-			</table>
-		
+	</p>
 	
-			<form action="https://jaures.github.io/Flyp/flyp.html"
-				<input type="submit" value="Go to Game" />
-			</form>
+	<p>
+		Controls:
+		<table>
+			<li> [Spacebar]         - Change Direction of Rotation </li>
+			<li> [Shift + Spacebar] - Change Axis of Rotation </li>
+			<li> [q]                - Boost Speed (shortens the bar) </li>
+		</table>
 	
-		</p>
-		
+		<form action="https://jaures.github.io/Flyp/flyp.html">
+			<input id="gotogame" type="submit" value="Go to Game" />
+		</form>
 	</p>
 </body>
 
