Added tap and double tap capabilities

--- a/flyp.html
+++ b/flyp.html
@@ -11,7 +11,7 @@
 <body>
 	<center>
 
-		<canvas id="gameGrid" width="400" height="360" style="border:16px solid #d3e3e3;">
+		<canvas id="gameGrid" width="400" height="360" style="border:16px solid #d3e3e3;" ondblclick="flip();flop();" onclick="flip();">
 			You browser does not support the HTML5 canvas tag.
 		</canvas>
 		
