--- a/flyp.html
+++ b/flyp.html
@@ -11,7 +11,7 @@
 <body>
 	<center>
 
-		<canvas id="gameGrid" width="400" height="360" style="border:16px solid #d3e3e3;" ondblclick="flip();flop();" onclick="flip();">
+		<canvas id="gameGrid" width="400" height="360" style="border:16px solid #d3e3e3;>
 			You browser does not support the HTML5 canvas tag.
 		</canvas>
 		
@@ -55,7 +55,10 @@
 		setInterval(update, 15);
 		
 		window.addEventListener('keypress', keyHandler);
+		c.addEventListener('tap', flop());
+		c.addEventListener('dbltap', flip());
 
+		
 		function update()
 		{
 		//https://careers.vmware.com/job/palo-alto/intern-mts-launch-undergrad-intern-program/1567/4445343
