--- a/flyp.html
+++ b/flyp.html
@@ -5,6 +5,7 @@
 <head>
 
 	<title> Flyp: The Flip-Flop Game </title>
+	<meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=no" />
 
 </head>
 
