Fixed Sizing issue hopefully...

--- a/flyp.html
+++ b/flyp.html
@@ -53,7 +53,7 @@
 
 	<center>
 
-		<canvas id="gameGrid" width="400" height="360" style="border:16px solid #d3e3e3;">
+		<canvas id="gameGrid" width="360px" height="360px" style="border:16px solid #d3e3e3;">
 			You browser does not support the HTML5 canvas tag.
 		</canvas>
 		
