Refactored Most of original code in flypv2.html making it more manageable for the future

--- a/index.html
+++ b/index.html
@@ -20,14 +20,25 @@
 	<p>
 		Controls:
 		<table>
-			<li> [Spacebar]         - Change Direction of Rotation </li>
-			<li> [Shift + Spacebar] - Change Axis of Rotation </li>
-			<li> [q]                - Boost Speed (shortens the bar) </li>
+			<li> [Spacebar]  - Change Direction of Rotation (FLIP) </li>
+			<li> [Shift + Spacebar] - Change Axis of Rotation (FLOP) </li>
+			<li> [q] - Boost Speed (shortens the bar) (BOOST)</li>
 		</table>
-	
-		<form action="https://jaures.github.io/Flyp/flyp.html">
-			<input id="gotogame" type="submit" value="Go to Game" />
-		</form>
+		
+		<center>
+			<p>
+			<hr/>
+			<form id="b1" action="https://jaures.github.io/Flyp/flyp.html">
+			
+				<input id="gotogame" type="submit" value="Go to Game" style="font-size: 24px;/>
+			</form>
+			
+			<form id="b2" action="https://jaures.github.io/Flyp/flypv2.html">
+			
+				<input id="gotogame" type="submit" value="Go to Game (beta)" style="font-size: 24px;"/>
+			</form>
+			</p>
+		</center>
 	</p>
 </body>
 
