--- a/flyp.html
+++ b/flyp.html
@@ -95,15 +95,24 @@
 		function update()
 		{
 			ctx.clearRect(0, 0, c.width, c.height);
+
+			ctx.fillStyle = "#111";
+			ctx.lineWidth = 1;
 			
 			ctx.beginPath();
 			ctx.arc(pts[0], pts[1], pts_size, 0, 2 * Math.PI);
 			ctx.stroke();
+			ctx.fill();
+			
+			ctx.lineWidth = 2;
+			
 			ctx.beginPath();
 			ctx.moveTo(flipper[0],flipper[1]);
 			ctx.lineTo(flipper[0] + flipper[2] * Math.cos(flipper[3]), 
 					flipper[1] + flipper[2] * Math.sin(flipper[3]));
 			ctx.stroke();
+			
+			ctx.fill();
 			
 			flipper[3] += dTheta;
 			flipper[3] %= 2*Math.PI;
