--- a/index.html
+++ b/index.html
@@ -28,14 +28,14 @@
 		<center>
 			<p>
 			<hr/>
-			<form id="b1" action="https://jaures.github.io/Flyp/flyp.html">
+			<form action="https://jaures.github.io/Flyp/flyp.html">
 			
-				<input id="gotogame" type="submit" value="Go to Game" style="font-size: 24px;/>
+				<input  type="submit" value="Go to Game" style="font-size: 24px;"/>
 			</form>
 			
-			<form id="b2" action="https://jaures.github.io/Flyp/flypv2.html">
+			<form action="https://jaures.github.io/Flyp/flypv2.html">
 			
-				<input id="gotogame" type="submit" value="Go to Game (beta)" style="font-size: 24px;"/>
+				<input type="submit" value="Go to Game (beta)" style="font-size: 24px;"/>
 			</form>
 			</p>
 		</center>
